# wall-check-cli

./: .pre-commit-config.yaml  README.rst  pyproject.toml
src/walls_check_cli/: __init__.py  cli.py  connect.py
tests/: test_walls_check_cli.py
