[tool.poetry]
name = "walls-check-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
walls-check-cli = "src.walls_check_cli.cli:cli"

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
requests = "^2.28.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"
pylint = "^2.15.10"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
